styles.css
/* TODO Work on key presentation with keyboard press and with hover click */ 

:root {
    --container-width: 90vw;
    --container-height: 55vw; 
    --container-width-unitless: 90; 
    --container-height-unitless: 55; 
    --container-max-width: 850px; 
    --container-max-height: calc(var(--container-max-width) * 
        (var(--container-height-unitless) / 
        var(--container-width-unitless)));

    --keys-container-width: 95%;
    --keys-container-height: 75%;
    --keys-container-width-unitless: 95; 
    --keys-container-height-unitless: 75; 

    --white-key-width: 12.5%;
    --white-key-height: 100%; 
    --white-key-width-unitless: 12.5; 
    --white-key-height-unitless: 75; 

    --black-key-width: 6.5%; 
    --black-key-height: 70%; 
    --black-key-width-unitless: 6.5; 
    --black-key-height-unitless: 70; 

    /* --black-key-top-percent: calc((100% - var(--white-key-height)) / 2); */
    --black-key-top-percent: 0%; 
    --padding-size-side: calc((100% - 8 * var(--white-key-width)) * .5); 
    /* --c-sharp-left:
        calc(100% - 7 * var(--white-key-width) + 
        .5 * (100 - var(--keys-container-width-unitless))); */
    --c-sharp-left:
        calc(1 * var(--white-key-width) - .5 * var(--black-key-width));
    --d-sharp-left: 
        calc(2 * var(--white-key-width) - .5 * var(--black-key-width)); 
    --f-sharp-left: 
        calc(4 * var(--white-key-width) - .5 * var(--black-key-width)); 
    --g-sharp-left: 
        calc(5 * var(--white-key-width) - .5 * var(--black-key-width));
    --a-sharp-left:
        calc(6 * var(--white-key-width) - .5 * var(--black-key-width));

    /* Old code example
        calc(100% - 2 * var(--white-key-width) - var(--padding-size-side)
        - .5 * var(--black-key-width));
    */ 
}

* {
    box-sizing: border-box; 
}

*:focus {
    outline: none; 
}

body, html {
    background-color: #db01db30;
    min-height: 100vh;
    display: flex; 
    flex-direction: column;
    margin: 0; 
    padding: 0; 
    color: #444;
}

.title { 
    text-align: center; 
    margin: 0; 
    padding: 20px;
    font-size: 3em;
}

.container {
    width: var(--container-width);
    height: var(--container-height); 
    max-width: calc(var(--container-max-width));
    max-height: var(--container-max-height); 
    background-color: #3a3a3a; 
    border: 5px solid;
    border-radius: 5px; 
    margin: auto auto .25em auto; 
    /* The position and top properties will move the main container slightly
    above center, though seems like a bit of a makeshift solution. */
    position: relative;  
    top: -10px;

    display: flex; 
    flex-direction: column;
    justify-content: center; 
    align-items: center; 
}

.directions { 
    width: 85%;
    margin: 0 auto auto auto; 
    /* Below is scaling container-max-width down by required factor by the fact that width is 85%, not 90% */ 
    max-width: calc(var(--container-max-width) * .85 / .90);
    text-align: center; 
    font-size: clamp(1em, 1.25em, 4vw);
}

/* @media all and (min-width: 1250px) {
    .directions { 
        width: 20%;
        margin: 0;  
        font-size: clamp(1em, 1.25em, 4vw);
        display: inline;
    }

    .container {
       
        /* The position and top properties will move the main container slightly
        above center, though seems like a bit of a makeshift solution. */
/*  
        position: relative;  
        top: -10px;
    
        display: inline-flex; 
    }
} */


.pedal-button-container { 
    display: flex; 
    justify-content: end; 
    width: 100%;
    height: 20%;
}

.keys-container {
    /* Use relative positioning so that black key alignment is more adaptable */
    position: relative; 
    display: flex; 
    justify-content: center; 
    width: 95%; 
    height: 75%; 

}

.pedal-button { 
    margin-top: 2.5%;
    height: 80%; 
    width: 17.5%;
    position: relative; 
    right: 10%;
    bottom: 15%;
    padding: 0px; 
    background-color: #b8b8b8;
    border: .25em  solid #888;
    font-size: clamp(0em, 2vw, 1.18em);
    font-family:'Courier New', Courier, monospace; 
    display: flex; 
    justify-content: space-evenly;
    align-items: center;
}

.pedal-button-text-span { 
    padding: 0px; 
}

.pedal-button-on { 
    background-color: #a0a0a0;
}

.glowing-light-span-off { 
    width: 17.5%; 
    height: 26.5%; 
    position: relative; 
    right: 7.5%;
    background-color: rgba(255, 0, 0, .5);
    border: 2px rgba(255, 0, 0, .5);
    border-radius: 50%; 
}

.glowing-light-span-on {
    width: 17.5%;
    height: 26.5%;
    position: relative;
    right: 7.5%;
    background-color: red;
    border: 2px red;
    border-radius: 50%;
    box-shadow: 0 0 15px 5px #ea4c89;
    margin-left: .75%; 
}

.btn-key-white {
    width: calc(var(--white-key-width));
    height: calc(var(--white-key-height)); 
    /* Calculate max width by taking container max width, scaling it down by the ratio between key and container widths, then scaling by key scale. */
    max-width: calc(var(--container-max-width) *
        var(--white-key-width-unitless) / var(--container-width-unitless) 
        * var(--white-key-scale));
    /* Similar to max width above */
    max-height: calc(var(--container-max-height) *
        (var(--white-key-height-unitless) / var(--container-height-unitless))
        * var(---white-key-scale));
    background-color: #fff;
    margin-right: 0;
    border: 1.5px solid #222;
    border-radius: 0 0 6px 6px; 
    
    padding-top: 35%; 
    color: #686868;  
    font-size: clamp(0px, 1.4em, 2.4vw);
}

.btn-key-white:hover {
    background-color: #ddd;
}

.btn-key-black {
    background-color: #222; 
    border: 2px solid #222;
    width: var(--black-key-width); 
    height: var(--black-key-height);
    /* Calculate max width by taking container max width, scaling it down by the ratio between key and container widths, then scaling by key scale. */
    max-width: calc(var(--container-max-width) *
        var(--black-key-width-unitless) / var(--container-width-unitless) 
        * var(--black-key-scale));
    /* Similar to max width above */
    max-height: calc(var(--container-max-height) *
        (var(--black-key-height-unitless) / var(--container-height-unitless))
        * var(---black-key-scale));
    /* Need to place black keys in specific spots overlaying white keys */
    position: absolute; 
    border-radius: 0 0 5px 5px; 

    text-align: center; 
    padding-top: 22%; 
    padding-left: 0; 
    padding-right: 0; 
    color: #999;
    font-size: clamp(0px, 1.25em, 2.1vw);
}

.btn-key-black:hover { 
    background-color: #333;
}

.btn-key-c-sharp {
    top: var(--black-key-top-percent); 
    left: var(--c-sharp-left); 
}

.btn-key-d-sharp {
    top: var(--black-key-top-percent); 
    left: var(--d-sharp-left); 
}

.btn-key-f-sharp {
    top: var(--black-key-top-percent); 
    left: var(--f-sharp-left); 
}

.btn-key-g-sharp {
    top: var(--black-key-top-percent);
    left: var(--g-sharp-left); 
}

.btn-key-a-sharp {
    top: var(--black-key-top-percent); 
    left: var(--a-sharp-left); 
}

footer { 
    margin-top: auto;
}

.footer-container { 
    display: flex; 
    justify-content: center; 
    align-items: baseline; 
}

.footer-item {
    margin-right: 5px; 
    margin-bottom: 8px; 
}

.footer-item:last-child { 
    margin-right: 0; 
}

.footer-text {
    font-size: 16px;
    /* padding: 10px; */
    font-weight: bold; 
}

.footer-linkedin-image {
    width: 40px; 
    margin-bottom: -8px; 
}

